# cellsweep

./: .gitignore  CellStraightner.ipynb  Dockerfile  README.md  environment.yml  pyproject.toml  tmp_scar.py
.github/: Pytest.yml
cellmender/: __init__.py  celltype_ambient.py  constants.py  main.py  simulation.py  utils.py
cellmender/utils/: __init__.py  data_utils.py  io_utils.py  logger_utils.py  visualization_utils.py
cellstraightener/: __init__.py  celltype_ambient.py  constants.py  poisson_nb.py  utils.py
cellsweep/: __init__.py  celltype_ambient.py  constants.py  main.py  model.py  simulation.py
cellsweep/utils/: __init__.py  data_utils.py  io_utils.py  logger_utils.py  visualization_utils.py
notebooks/: 8cube.ipynb  CellStraightner.ipynb  benchmarking copy.ipynb  benchmarking.ipynb  benchmarking_8cube.ipynb  benchmarking_copy.ipynb  benchmarking_copy_out.ipynb  benchmarking_hgmm12k.ipynb  benchmarking_kidney.ipynb  benchmarking_melanoma.ipynb  benchmarking_mouse_pbmc_5k.ipynb  benchmarking_pbmc33k.ipynb  benchmarking_pbmc8k.ipynb  benchmarking_sim1.ipynb  benchmarking_simulation1.ipynb  benchmarking_simulation2.ipynb  benchmarking_simulation3.ipynb  cellbender_settings.ipynb  debug.ipynb  idempotency.ipynb  intro.ipynb  noise_controls.ipynb  runtime.ipynb  spatial.ipynb  technologies.ipynb  unspliced.ipynb
notebooks/config/: 8cubed.yaml  ATAC_hgmm_10k.yaml  custom.yaml  hgmm12k.yaml  hgmm_12k.yaml  kidney_nuclei_10k.yaml  melanoma.yaml  pbmc33k.yaml  pbmc8k.yaml  pbmc_33k.yaml  pbmc_mouse_5k.yaml  simulation.yaml  simulation1_small_noise.yaml  simulation2_high_noise.yaml  simulation2_no_noise.yaml  simulation3_all_noise.yaml  simulation4_small_noise_ambient_only.yaml  tcell_55k.yaml
scripts/: decontx.Dockerfile  run_8cube.py  run_decontx.R  run_emptydrops.R  run_scar.py  run_soupx.R  soupx.Dockerfile  upload_to_box.sh  visualize_8cube.py
tests/: test_denoise_count_matrix.py
