[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmender"
version = "0.1.0"
description = "Denoising scRNA-seq in a smart and efficient way."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Maya Caskey", email = "mcaskey@caltech.edu"},
    {name = "Joseph Rich", email = "jmrich@caltech.edu"},
]
maintainers = [
    {name = "Maya Caskey", email = "mcaskey@caltech.edu"},
    {name = "Joseph Rich", email = "jmrich@caltech.edu"}
]
requires-python = ">=3.9"
keywords = ["bioinformatics", "machine learning", "single-cell", "scRNA-seq", "denoising", "data-analysis"]
classifiers = [
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities"
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "anndata",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black[jupyter]>=22.0.0",
    "isort>=6.0.0",
    "pympler>=1.1"
]
analysis = [
    "nbval>=0.10.0",
    "nbdime>=4.0.2",
    "ipython>=8.0.0",
    "upsetplot",
    "scanpy",
    "seaborn",
    "matplotlib",
    "celltypist"
]

[project.urls]
"Homepage" = "https://github.com/pachterlab/cellmender"

[tool.setuptools.packages.find]
include = ["cellmender*"]

[tool.setuptools.package-data]
cellmender = ["*.txt", "*.md", "*.csv"]  # Ensure additional files like data or docs are included

[project.scripts]
cellmender = "cellmender.main:main"  # This replaces the console_scripts entry
